cluster/apps/external-services/radarr/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr
subsets:
  - addresses:
      - ip: 192.168.30.199
    ports:
      - name: http
        port: 7878
        protocol: TCP
