cluster/apps/external-services/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: http
  type: ClusterIP
