cluster/apps/external-services/radarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name radarr
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`movie.${SECRET_DOMAIN}`)
      middlewares:
        - name: secure-headers
        - name: authelia
          namespace: authentication-system
      services:
        - name: *name
          port: 7878
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
